added cookies to save the session forwarded to another servlet

--- a/web-app/src/main/webapp/index.html
+++ b/web-app/src/main/webapp/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <form action="servlet1" method="post">
-		<input type="text" name="name" placeholder="enter name">
+		<input type="text" name="user_name" placeholder="enter name">
 		<button type="submit">Go to servlet1</button>
 	</form>
 </body>
